added new notes

--- a/Pytorch/Object-Detection.ipynb
+++ b/Pytorch/Object-Detection.ipynb
@@ -35,6 +35,23 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### In PyTorch, non-max suppression is performed using the nms function in the torchvision.ops module. The nms function takes the bounding box coordinates, the confidence of the object in the bounding box, and the threshold of IoU across bounding boxes, to identify the bounding boxes to be retained. You will be leveraging the nms function when predicting object classes and bounding boxes of objects in a new image in both the Training R-CNN-based custom object detectors and Training Fast R-CNN-based custom object detectors sections in steps 19 and 16, respectively."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A true positive refers to the bounding boxes that predicted the correct class of objects and that have an IoU with the ground truth that is greater than a certain threshold. A false positive refers to the bounding boxes that predicted the class incorrectly or have an overlap that is less than the defined threshold with the ground truth. Furthermore, if there are multiple bounding boxes that are identified for the same ground truth bounding box, only one box can get into a true positive, and everything else gets into a false positive.\n",
+    "\n",
+    "- Average Precision: Average precision is the average of precision values calculated at various IoU thresholds.\n",
+    "- mAP: mAP is the average of precision values calculated at various IoU threshold values across all the classes of objects present within the dataset.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
