added new notes

--- a/Pytorch/Object-Detection.ipynb
+++ b/Pytorch/Object-Detection.ipynb
@@ -48,11 +48,6 @@
     "- Average Precision: Average precision is the average of precision values calculated at various IoU thresholds.\n",
     "- mAP: mAP is the average of precision values calculated at various IoU threshold values across all the classes of objects present within the dataset.\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
@@ -62,7 +57,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.19"
   }
  },
