added new models

--- a/Deep-Learning/GAN.ipynb
+++ b/Deep-Learning/GAN.ipynb
@@ -15,10 +15,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "- Train the generator (and not the discriminator) to generate images such that the discriminator classifies the images as real.\n",
+    "- Train the discriminator (and not the generator) to classify the images that the generator generates as fake.\n",
+    "- Repeat the process until an equilibrium is achieved."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
