added new models

--- a/Deep-Learning/GAN.ipynb
+++ b/Deep-Learning/GAN.ipynb
@@ -24,14 +24,44 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "def discriminator_train_step(real_data, fake_data):\n",
+    "    d_optimizer.zero_grad()\n",
+    "    prediction_real = discriminator(real_data)\n",
+    "    error_real = loss(prediction_real.squeeze(), \\\n",
+    "                      torch.ones(len(real_data)).to(device))\n",
+    "    error_real.backward()\n",
+    "    prediction_fake = discriminator(fake_data)\n",
+    "    error_fake = loss(prediction_fake.squeeze(), \\\n",
+    "                      torch.zeros(len(fake_data)).to(device))\n",
+    "    error_fake.backward()\n",
+    "    d_optimizer.step()\n",
+    "    return error_real + error_fake\n",
+    "\n",
+    "def generator_train_step(fake_data):\n",
+    "    g_optimizer.zero_grad()\n",
+    "    prediction = discriminator(fake_data)\n",
+    "    error = loss(prediction.squeeze(), \\\n",
+    "                 torch.ones(len(real_data)).to(device))\n",
+    "    error.backward()\n",
+    "    g_optimizer.step()\n",
+    "    return error"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "machine-learning-env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
