added new models

--- a/Deep-Learning/GAN.ipynb
+++ b/Deep-Learning/GAN.ipynb
@@ -51,6 +51,20 @@
     "    g_optimizer.step()\n",
     "    return error"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementing conditional GANs\n",
+    "\n",
+    "### The strategy we adopt is as follows:\n",
+    "\n",
+    "- Specify the label of the image we want to generate as a one-hot-encoded version.\n",
+    "- Pass the label through an embedding layer to generate a multi-dimensional representation of each class.\n",
+    "- Generate random noise and concatenate with the embedding layer generated in the previous step.\n",
+    "- Train the model just like we did in the previous sections, but this time with the noise vector concatenated with the embedding of the class of image we wish to generate."
+   ]
   }
  ],
  "metadata": {
