added new models

--- a/AWS/S3-Storage.ipynb
+++ b/AWS/S3-Storage.ipynb
@@ -22,6 +22,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Amazon S3 INT\n",
+    "\n",
+    "\n",
+    "- For data with changing access patterns\n",
+    "- Milliseconds access\n",
+    "- ≥ 3 Availability Zones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
