added new models

--- a/AWS/S3-Storage.ipynb
+++ b/AWS/S3-Storage.ipynb
@@ -46,6 +46,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Amazon S3 1Z-1A\n",
+    "\n",
+    "\n",
+    "- For re-creatable, less accessed data\n",
+    "- Milliseconds access\n",
+    "- 1 Availability Zone"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
