added new models

--- a/AWS/S3-Storage.ipynb
+++ b/AWS/S3-Storage.ipynb
@@ -58,6 +58,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Amazon Glacier\n",
+    "\n",
+    "\n",
+    "- For archive data\n",
+    "- Select minutes or hours\n",
+    "- ≥ 3 Availability Zones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
