--- a/AWS/S3-Storage.ipynb
+++ b/AWS/S3-Storage.ipynb
@@ -95,6 +95,20 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Batch processing\n",
+    "### Batch processing periodically collects and groups source data\n",
+    "\n",
+    "- With batch processing, the ingestion layer periodically collects and groups source data and sends it to a destination like Amazon S3. You can process groups based on any logical ordering, the activation of certain conditions, or a simple schedule. Batch processing is typically used when there is no real need for real-time or near-real-time data, because it is generally easier and more affordably implemented than other ingestion options.\n",
+    "\n",
+    "## Several services can help with batch processing into the AWS Cloud\n",
+    "\n",
+    "### For batch ingestions to the AWS Cloud, you can use services like AWS Glue, an ETL (extract, transform, and load) service that you can use to categorize your data, clean it, enrich it, and move it between various data stores. AWS Database Migration Service (AWS DMS) is another service to help with batch ingestions. This service reads from historical data from source systems, such as relational database management systems, data warehouses, and NoSQL databases, at any desired interval. You can also automate various ETL tasks that involve complex workflows by using AWS Step Functions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
