added new models

--- a/AWS/S3-Storage.ipynb
+++ b/AWS/S3-Storage.ipynb
@@ -136,6 +136,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Stream processing\n",
+    "### Stream processing manipulates and loads data as it’s recognized\n",
+    "\n",
+    "- Stream processing, which includes real-time processing, involves no grouping at all. Data is sourced, manipulated, and loaded as soon as it is created or recognized by the data ingestion layer. This kind of ingestion is less cost-effective, since it requires systems to constantly monitor sources and accept new information. But you might want to use it for real-time predictions using an Amazon SageMaker endpoint that you want to show your customers on your website or some real-time analytics that require continually refreshed data, like real-time dashboards."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
