added new models

--- a/Apache/Airflow.ipynb
+++ b/Apache/Airflow.ipynb
@@ -28,6 +28,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Transforming your data for ML\n",
+    "\n",
+    "### Data transformation is often necessary to deal with huge amounts of data. Distributed computation frameworks like MapReduce and Apache Spark provide a protocol of data processing and node task distribution and management. They also use algorithms to split datasets into subsets and distribute them across nodes in a compute cluster."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
