added new models

--- a/Apache/Airflow.ipynb
+++ b/Apache/Airflow.ipynb
@@ -37,7 +37,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Using Apache Spark on Amazon EMR provides a managed framework\n",
+    "### Using Apache Spark on Amazon EMR provides a managed framework that can process massive quantities of data. Amazon EMR supports many instance types that have proportionally high CPU with increased network performance, which is well suited for HPC (high-performance computing) applications."
+   ]
   }
  ],
  "metadata": {
