--- a/AWS/S3-Storage.ipynb
+++ b/AWS/S3-Storage.ipynb
@@ -194,7 +194,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Question -2\n",
+    "\n",
+    "### An ad-tech company has hired a data engineer to create and maintain a machine learning pipeline for its clickstream data. The data will be gathered from various sources, including on premises, and will need to be streamed to the company’s Amazon EMR instances for further processing.\n",
+    "\n",
+    "\n",
+    "\n",
+    "### What service or combination of services can the company use to meet these requirements?\n",
+    "\n",
+    "- "
+   ]
   }
  ],
  "metadata": {
