added new models

--- a/AWS/Sagemaker.ipynb
+++ b/AWS/Sagemaker.ipynb
@@ -19,6 +19,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Algorithms for natural language processing (NLP)\n",
+    "\n",
+    "### There are Amazon SageMaker built-in algorithms for natural language processing:\n",
+    "\n",
+    "- BlazingText algorithm provides highly optimized implementations of the Word2vec and text classification algorithms.\n",
+    "- Sequence2sequence is a supervised learning algorithm where the input is a sequence of tokens (for example, text, audio) and the output generated is another sequence of tokens.\n",
+    "- Object2Vec generalizes the well-known Word2Vec embedding technique for words that are optimized in the Amazon SageMaker BlazingText algorithm."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
