added new models

--- a/AWS/AWS.ipynb
+++ b/AWS/AWS.ipynb
@@ -108,6 +108,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### You should decouple your ETL process from the ML pipeline. The compute power needed for ML isn’t the same as what you’d need for an ETL process—they have very different requirements. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
