--- a/Apache/Airflow.ipynb
+++ b/Apache/Airflow.ipynb
@@ -41,6 +41,15 @@
     "## Using Apache Spark on Amazon EMR provides a managed framework\n",
     "### Using Apache Spark on Amazon EMR provides a managed framework that can process massive quantities of data. Amazon EMR supports many instance types that have proportionally high CPU with increased network performance, which is well suited for HPC (high-performance computing) applications."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### An ETL process needs to read in files from multiple formats, transform them as needed, and then write them back to a persistent storage. Keep in mind that reading and writing takes a lot of memory and disk I/O, so when you decouple your ETL process, use a framework like Apache Spark, which can handle large amounts of data easily for ETL\n",
+    "\n",
+    "### "
+   ]
   }
  ],
  "metadata": {
