added new files

--- a/AWS/Sagemaker.ipynb
+++ b/AWS/Sagemaker.ipynb
@@ -39,6 +39,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Create a model in Amazon SageMaker\n",
+    "### You need:\n",
+    "\n",
+    "- The Amazon S3 path where the model artifacts are stored \n",
+    "- The Docker registry path for the image that contains the inference code \n",
+    "- A name that you can use for subsequent deployment steps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
