added new files

--- a/AWS/Sagemaker.ipynb
+++ b/AWS/Sagemaker.ipynb
@@ -45,7 +45,21 @@
     "\n",
     "- The Amazon S3 path where the model artifacts are stored \n",
     "- The Docker registry path for the image that contains the inference code \n",
-    "- A name that you can use for subsequent deployment steps"
+    "- A name that you can use for subsequent deployment steps\n",
+    "\n",
+    "## Create an endpoint configuration for an HTTPS endpoint\n",
+    "### You need:\n",
+    "\n",
+    "- The name of one or more models in production variants\n",
+    "- The ML compute instances that you want Amazon SageMaker to launch to host each production variant. When hosting models in production, you can configure the endpoint to elastically scale the deployed ML compute instances. For each production variant, you specify the number of ML compute instances that you want to deploy. When you specify two or more instances, Amazon SageMaker launches them in multiple Availability Zones. This ensures continuous availability. Amazon - SageMaker manages deploying the instances."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create an HTTPS endpoint\n",
+    "### You need to provide the endpoint configuration to Amazon SageMaker. The service launches the ML compute instances and deploys the model or models as specified in the configuration."
    ]
   },
   {
