added new notes

--- a/AWS/Instance.ipynb
+++ b/AWS/Instance.ipynb
@@ -60,6 +60,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Minimum and Maximum Scaling Limits\n",
+    "\n",
+    "### Before crafting a scaling policy, it’s essential to set minimum and maximum scaling limits. The minimum value, set to at least 1, represents the minimum number of instances, while the maximum value signifies the upper cap. SageMaker auto scaling adheres to these limits and automatically scales in to the minimum specified instances when traffic becomes zero."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
