added new notes

--- a/Deep-Learning/Params.ipynb
+++ b/Deep-Learning/Params.ipynb
@@ -17,10 +17,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Batch normalization\n",
+    "\n",
+    "### batch normalization normalizes neuron outputs across a training batch of data by subtracting the average and dividing by the standard deviation. However, doing just that could be swinging the pendulum too far in one direction—with a perfectly centered and normally wide distribution everywhere, all neurons would have the same behavior. The trick is to introduce two additional learnable parameters per neuron, called scale and center, and to normalize the input data to the neuron using these values:\n",
+    "\n",
+    "- Normalized = (input - center)/ scale\n",
+    "\n",
+    "### This way, the network decides, through machine learning, how much centering and rescaling to apply at each neuron. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
