--- a/Deep-Learning/Params.ipynb
+++ b/Deep-Learning/Params.ipynb
@@ -26,7 +26,9 @@
     "\n",
     "- Normalized = (input - center)/ scale\n",
     "\n",
-    "### This way, the network decides, through machine learning, how much centering and rescaling to apply at each neuron. "
+    "### This way, the network decides, through machine learning, how much centering and rescaling to apply at each neuron.\n",
+    "\n",
+    "### The problem with batch normalization is that at prediction time you do not have training batches over which you can compute the statistics of your neurons’ outputs, but you still need those values. Therefore, during training, neurons’ output statistics are computed across a “sufficient” number of batches using a running exponential average. These stats are then used at inference time."
    ]
   },
   {
