added new notes

--- a/Deep-Learning/Params.ipynb
+++ b/Deep-Learning/Params.ipynb
@@ -28,7 +28,13 @@
     "\n",
     "### This way, the network decides, through machine learning, how much centering and rescaling to apply at each neuron.\n",
     "\n",
-    "### The problem with batch normalization is that at prediction time you do not have training batches over which you can compute the statistics of your neurons’ outputs, but you still need those values. Therefore, during training, neurons’ output statistics are computed across a “sufficient” number of batches using a running exponential average. These stats are then used at inference time."
+    "### The problem with batch normalization is that at prediction time you do not have training batches over which you can compute the statistics of your neurons’ outputs, but you still need those values. Therefore, during training, neurons’ output statistics are computed across a “sufficient” number of batches using a running exponential average. These stats are then used at inference time.\n",
+    "\n",
+    "### Batch normalization is performed on the output of a layer before the activation function is applied. So, rather than set activation='relu' in the Dense layer’s constructor, we’d omit the activation function there and then add a separate Activation layer.\n",
+    "\n",
+    "### If you use center=True in batch norm, you do not need biases in your layer. The batch norm offset plays the role of a bias.\n",
+    "\n",
+    "### If you use an activation function that is scale-invariant (i.e., does not change shape if you zoom in on it), then you can set scale=False. ReLu is scale-invariant. Sigmoid is not."
    ]
   },
   {
