added new notes

--- a/Deep-Learning/Params.ipynb
+++ b/Deep-Learning/Params.ipynb
@@ -40,7 +40,37 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Activation function\n",
+    "- A function applied to the weighted sum of the inputs to a node in a neural network. This is the way that nonlinearity is added to a neural network. Common activation functions include ReLU and sigmoid.\n",
+    "\n",
+    "## AUC\n",
+    "- Area under the curve of true positive rate plotted against false positive rate. The AUC is a threshold-independent error metric.\n",
+    "\n",
+    "## Batch or mini-batch\n",
+    "- Training is always performed on batches of training data and labels. Doing so helps the algorithm converge. The batch dimension is typically the first dimension of data tensors. For example, a tensor of shape [100, 192, 192, 3] contains 100 images of 192x192 pixels with three values per pixel (RGB).\n",
+    "\n",
+    "## Batch normalization\n",
+    "- Adding two additional learnable parameters per neuron to normalize the input data to the neuron during training.\n",
+    "\n",
+    "## Cross-entropy loss\n",
+    "- A special loss function often used in classifiers.\n",
+    "\n",
+    "## Dense layer\n",
+    "- A layer of neurons where each neuron is connected to all the neurons in the previous layer.\n",
+    "\n",
+    "## Dropout\n",
+    "- A regularization technique in deep learning where, during each training iteration, randomly chosen neurons from the network are dropped.\n",
+    "\n",
+    "## Early stopping\n",
+    "- Stopping a training run when the validation set error starts to get worse.\n",
+    "\n",
+    "## Epoch\n",
+    "- A full pass through the training dataset during training.\n",
+    "\n",
+    "## Error metric\n",
+    "- The error function comparing neural network outputs to the correct answers. The error on the evaluation dataset is what is reported. Common error metrics include precision, recall, accuracy, and AUC."
+   ]
   },
   {
    "cell_type": "markdown",
