added new models

--- a/Deep-Learning/transfer-learning.ipynb
+++ b/Deep-Learning/transfer-learning.ipynb
@@ -22,7 +22,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### With a learning rate set too high, the pretrained weights are being changed in large steps and all the information learned during pretraining is lost. Finding a learning rate that works can be tricky—set the learning rate too low and convergence is very slow, too high and pretrained weights are lost.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
