added new notes

--- a/Deep-Learning/transfer-learning.ipynb
+++ b/Deep-Learning/transfer-learning.ipynb
@@ -39,13 +39,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###"
+    "## Differential learning rate\n",
+    "\n",
+    "### Another good trade-off is to apply a differential learning rate, whereby we use a low learning rate for the pretrained layers and a normal learning rate for the layers of our custom classification head.\n",
+    "\n",
+    " ### In fact, we can extend the idea of a differential learning rate within the pretrained layers themselves—we can multiply the learning rate by a factor that varies based on layer depth, gradually increasing the per-layer learning rate and finishing with the full learning rate for the classification head.\n",
+    "\n",
+    "### In order to apply a complex differential learning rate like this in Keras, we need to write a custom optimizer. But fortunately, an open source Python package called AdamW exists that we can use by specifying a learning rate multiplier for different layers (see 03_image_models/03b_finetune_MOBILENETV2_flowers5.ipynb in the GitHub repository for the complete code):\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mult_by_layer={\n",
+    "    'block1_': 0.1,\n",
+    "    'block2_': 0.15,\n",
+    "    'block3_': 0.2,\n",
+    "    ... # blocks 4 to 11 here\n",
+    "    'block12_': 0.8,\n",
+    "    'block13_': 0.9,\n",
+    "    'block14_': 0.95,\n",
+    "    'flower_prob': 1.0, # for the classification head\n",
+    "}\n",
+    "\n",
+    "optimizer = AdamW(lr=LR_MAX, model=model,\n",
+    "                   lr_multipliers=mult_by_layer)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "machine-learning-env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
