added new models

--- a/Data-Architecture/Architecture-Types.ipynb
+++ b/Data-Architecture/Architecture-Types.ipynb
@@ -30,6 +30,28 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Lambda Architecture\n",
+    "\n",
+    "### Lambda architecture is a data-processing architecture designed to handle massive quantities of data by using both batch and real-time stream processing methods. The idea is to get comprehensive and accurate views of the batch data and to balance latency, throughput, scaling, and fault tolerance by using batch processing, while simultaneously using real-time stream processing to provide views of online data (such as IoT devices, Twitter feeds, or computer log files). You can join the two view outputs before the presentation/serving layer.\n",
+    "\n",
+    "### Lambda architecture bridges the gap between the historical “single source of truth” and the highly sought after “I want it now” real-time solution by combining traditional batch processing systems with stream consumption tools to meet both needs.\n",
+    "\n",
+    "### The Lambda architecture has three key principles:\n",
+    "\n",
+    "### Dual data model\n",
+    "- The Lambda architecture uses one model for batch processing (batch layer) and another model for real-time processing (stream layer). This allows the system to handle both batch and real-time data and to perform both types of processing in scalable and fault-tolerant ways.\n",
+    "\n",
+    "### Single unified view\n",
+    "- The Lambda architecture uses a single unified view (called the presentation layer) to present the results of both batch and real-time processing to end users. This allows the user to see a complete and up-to-date view of the data, even though it’s being processed by two different systems.\n",
+    "\n",
+    "### Decoupled processing layers\n",
+    "- The Lambda architecture decouples the batch and real-time processing layers so that they can be scaled independently and developed and maintained separately, allowing for flexibility and ease of development."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
